# ai-call

./: .claudeignore  .env.example  .gitignore  .npmrc  CLAUDE.md  README.md  ecosystem.config.js  login_resp.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .gitignore  nest-cli.json  package.json  prisma.config.ts  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  freeswitch-event-worker.main.ts  freeswitch-event-worker.module.ts  internal-endpoints.spec.ts  main.ts  outbox-worker.main.ts  outbox-worker.module.ts  product-module-permissions.spec.ts  scheduler-worker.main.ts  scheduler-worker.module.ts
apps/dashboard/: .env.example  components.json  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/dashboard/__tests__/: audio-utils.test.ts  data-table.test.tsx  (+27 more)
contracts/: task-api.schema.json  voice-websocket.schema.json
docs/: architecture-v2.md  authz-architecture.md  authz-go-live-checklist.md  authz-implementation-backlog.md  backlog.md  backup-restore-runbook.md  deployment.md  knowledge-base-microfrontend.md  opmization-07-16.md  outbound-call-business-flow.md  outbound-call-management.canvas  prd-stage-roadmap.md  vad-architecture.md
docs/testing/: call-10-cross-tenant-retrieval.md  call-11-migration-dryrun.md  operations-loop-regression.md
freeswitch/: Dockerfile  docker-compose.yml
freeswitch/conf/: freeswitch.xml  vars.xml
freeswitch/local/: README.md  call-audio.ps1  call.ps1  check.ps1  start.ps1
scripts/: call-10-cross-tenant-retrieval.mjs  call-11-migration-dryrun.ps1  db-backup.ps1  db-restore-check.ps1  dev-outbound-stop.ps1  dev-outbound.ps1  microsip-local-setup.ps1  outbound-runtime-check.ps1
scripts/lib/: OutboundLocal.psm1
scripts/tests/: OutboundLocal.Tests.ps1
services/funasr-server/: .env.example  .gitignore  README.md  pyproject.toml
services/funasr-server/src/funasr_server/: __main__.py  app.py  config.py  main.py  models.py
services/funasr-server/src/funasr_server/api/: embed.py  health.py  http.py  sse.py  ws.py
services/funasr-server/tests/: test_api_embed.py  test_api_http.py  test_api_ws.py  test_config.py  test_models.py
services/voice-agent/: README.md  pyproject.toml
services/voice-agent/src/voice_agent/: __init__.py  agent.py  audio.py  callbacks.py  contracts.py  demo_server.py  dialog_router.py  echo_gate.py  flow_executor.py  flow_types.py  intent_embed.py  main.py  rag.py  repair_phrases.py  scenarios.py  server.py  stt.py  tasks.py  text_test_callbacks.py  tools.py  tts.py  tts_factory.py  tts_qwen.py  types.py  vad.py  voice_personas.py
services/voice-agent/src/voice_agent/llm/: __init__.py  factory.py  langchain_adapter.py  legacy_httpx.py  mock.py  protocol.py  provider_profile.py
services/voice-agent/tests/: test_agent.py  test_audio.py  test_context_window.py  test_contracts.py  test_demo_server.py  test_dialog_router.py  test_echo_gate.py  test_echo_gate_integration.py  test_esl_client.py  test_flow_executor_embed.py  test_flow_executor_intent.py  test_intent_embed_dashscope.py  test_llm_factory.py  test_llm_langchain.py  test_llm_provider_profile.py  test_llm_sse.py  test_paced_delivery.py  test_rag.py  test_repair_phrases.py  test_semantic_endpoint.py  test_server_callbacks.py  test_server_health.py  test_side_question_ack.py  test_silence_config.py  test_stt.py  test_stt_dashscope.py  test_tasks_client.py  test_tts_cosyvoice.py  test_tts_interrupt.py  test_tts_log_filter.py  test_tts_provider_resolve.py  test_tts_qwen.py  test_vad.py  test_vad_silero.py  test_voice_personas.py  test_web_channel.py
(+440 files in other folders)
