[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funasr-server"
version = "0.1.0"
description = "FunASR WebSocket + HTTP + SSE 服务端 - 项目内 Python 子服务（替代 Docker 部署）"
requires-python = ">=3.10"
dependencies = [
    # 模型层
    "funasr>=1.1",
    "modelscope>=1.10",
    "torch>=2.0",
    "torchaudio>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    # modelscope.pipelines（/embed 句向量端点用）的隐式依赖：modelscope 声明为可选/懒加载，
    # 但 modelscope.pipelines.base 在 import 时无条件需要它们，缺一即 ImportError。
    "addict>=2.4",
    "datasets>=2.0",
    "pillow>=10.0",
    "simplejson>=3.19",
    "sortedcontainers>=2.4",
    # Web 层（FastAPI 原生支持 WebSocket，无需裸 websockets 库）
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "ffmpeg-python>=0.2",
    # 配置/日志
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
funasr-server = "funasr_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
