[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-agent"
version = "0.1.0"
description = "Python Voice Agent for AI Call - FreeSWITCH WebSocket + WebRTC VAD + FunASR + CosyVoice"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "webrtcvad>=2.0.5",
    # Silero VAD（onnxruntime 后端，无 torch）；VAD_PROVIDER=silero 时使用，
    # 装不上/加载失败会在运行时自动回退 webrtc，不阻塞主链路
    "pysilero-vad>=2.0",
    "httpx>=0.27.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]
tts-qwen = [
    "dashscope>=1.20",
]

[project.scripts]
voice-agent = "voice_agent.main:main"
voice-agent-cli = "voice_agent.main:cli_main_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
